src/qt/libqtextdocument.bf

using System;
using System.Interop;
namespace Qt;

[AllowDuplicates]
public enum QTextDocument__MetaInformation
{
	DocumentTitle = 0,
	DocumentUrl = 1,
	CssMedia = 2,
}
[AllowDuplicates]
public enum QTextDocument__MarkdownFeature
{
	MarkdownNoHTML = 96,
	MarkdownDialectCommonMark = 0,
	MarkdownDialectGitHub = 20236,
}
[AllowDuplicates]
public enum QTextDocument__FindFlag
{
	FindBackward = 1,
	FindCaseSensitively = 2,
	FindWholeWords = 4,
}
[AllowDuplicates]
public enum QTextDocument__ResourceType
{
	UnknownResource = 0,
	HtmlResource = 1,
	ImageResource = 2,
	StyleSheetResource = 3,
	MarkdownResource = 4,
	UserResource = 100,
}
[AllowDuplicates]
public enum QTextDocument__Stacks
{
	UndoStack = 1,
	RedoStack = 2,
	UndoAndRedoStacks = 3,
}
public interface IQAbstractUndoItem
{
	void* NativePtr { get; }
}
public struct QAbstractUndoItemPtr : IQAbstractUndoItem, IDisposable
{
	protected void* nativePtr;
	public void* NativePtr => nativePtr;
	
	public this(void* ptr)
	{
		this.nativePtr = ptr;
	}
	
	public void Dispose()
	{
		CQt.QAbstractUndoItem_Delete(this.nativePtr);
	}
	
	public void Undo()
	{
		CQt.QAbstractUndoItem_Undo(this.nativePtr);
	}
	
	public void Redo()
	{
		CQt.QAbstractUndoItem_Redo(this.nativePtr);
	}
	
	public void OperatorAssign(IQAbstractUndoItem param1)
	{
		CQt.QAbstractUndoItem_OperatorAssign(this.nativePtr, (param1 == default || param1.NativePtr == default) ? default : param1.NativePtr);
	}
	
}
public class QAbstractUndoItem
{
	public QAbstractUndoItemPtr handle;
	
	public static implicit operator QAbstractUndoItemPtr(Self self)
	{
		return self.handle;
	}
	
	public ~this()
	{
		this.handle.Dispose();
	}
	
	public virtual void Undo()
	{
		this.handle.Undo();
	}
	
	public virtual void Redo()
	{
		this.handle.Redo();
	}
	
	public void OperatorAssign(IQAbstractUndoItem param1)
	{
		this.handle.OperatorAssign(param1);
	}
	
}
extension CQt
{
	[LinkName("QAbstractUndoItem_Undo")]
	public static extern void QAbstractUndoItem_Undo(void* c_this);
	[LinkName("QAbstractUndoItem_Redo")]
	public static extern void QAbstractUndoItem_Redo(void* c_this);
	[LinkName("QAbstractUndoItem_OperatorAssign")]
	public static extern void QAbstractUndoItem_OperatorAssign(void* c_this, void* param1);
	/// Delete this object from C++ memory
	[LinkName("QAbstractUndoItem_Delete")]
	public static extern void QAbstractUndoItem_Delete(void* self);
}
public interface IQTextDocument
{
	void* NativePtr { get; }
}
public struct QTextDocumentPtr : IQTextDocument, IDisposable, IQObject
{
	protected void* nativePtr;
	public void* NativePtr => nativePtr;
	
	public this(void* ptr)
	{
		this.nativePtr = ptr;
	}
	
	public static Self New()
	{
		return .(CQt.QTextDocument_new());
	}
	
	public void Dispose()
	{
		CQt.QTextDocument_Delete(this.nativePtr);
	}
	
	public void* MetaObject()
	{
		return CQt.QTextDocument_MetaObject(this.nativePtr);
	}
	
	public void* Metacast(char8* param1)
	{
		return CQt.QTextDocument_Metacast(this.nativePtr, param1);
	}
	
	public int32 Metacall(int64 param1, int32 param2, void* param3)
	{
		return CQt.QTextDocument_Metacall(this.nativePtr, (int64)param1, param2, param3);
	}
	
	public static libqt_string Tr(char8* s)
	{
		return CQt.QTextDocument_Tr(s);
	}
	
	public void* Clone()
	{
		return CQt.QTextDocument_Clone(this.nativePtr);
	}
	
	public bool IsEmpty()
	{
		return CQt.QTextDocument_IsEmpty(this.nativePtr);
	}
	
	public void Clear()
	{
		CQt.QTextDocument_Clear(this.nativePtr);
	}
	
	public void SetUndoRedoEnabled(bool enable)
	{
		CQt.QTextDocument_SetUndoRedoEnabled(this.nativePtr, enable);
	}
	
	public bool IsUndoRedoEnabled()
	{
		return CQt.QTextDocument_IsUndoRedoEnabled(this.nativePtr);
	}
	
	public bool IsUndoAvailable()
	{
		return CQt.QTextDocument_IsUndoAvailable(this.nativePtr);
	}
	
	public bool IsRedoAvailable()
	{
		return CQt.QTextDocument_IsRedoAvailable(this.nativePtr);
	}
	
	public int32 AvailableUndoSteps()
	{
		return CQt.QTextDocument_AvailableUndoSteps(this.nativePtr);
	}
	
	public int32 AvailableRedoSteps()
	{
		return CQt.QTextDocument_AvailableRedoSteps(this.nativePtr);
	}
	
	public int32 Revision()
	{
		return CQt.QTextDocument_Revision(this.nativePtr);
	}
	
	public void SetDocumentLayout(IQAbstractTextDocumentLayout layout)
	{
		CQt.QTextDocument_SetDocumentLayout(this.nativePtr, (layout == default || layout.NativePtr == default) ? default : layout.NativePtr);
	}
	
	public void* DocumentLayout()
	{
		return CQt.QTextDocument_DocumentLayout(this.nativePtr);
	}
	
	public void SetMetaInformation(int64 info, String param2)
	{
		CQt.QTextDocument_SetMetaInformation(this.nativePtr, (int64)info, libqt_string(param2));
	}
	
	public libqt_string MetaInformation(int64 info)
	{
		return CQt.QTextDocument_MetaInformation(this.nativePtr, (int64)info);
	}
	
	public libqt_string ToHtml()
	{
		return CQt.QTextDocument_ToHtml(this.nativePtr);
	}
	
	public void SetHtml(String html)
	{
		CQt.QTextDocument_SetHtml(this.nativePtr, libqt_string(html));
	}
	
	public libqt_string ToMarkdown()
	{
		return CQt.QTextDocument_ToMarkdown(this.nativePtr);
	}
	
	public void SetMarkdown(String markdown)
	{
		CQt.QTextDocument_SetMarkdown(this.nativePtr, libqt_string(markdown));
	}
	
	public libqt_string ToRawText()
	{
		return CQt.QTextDocument_ToRawText(this.nativePtr);
	}
	
	public libqt_string ToPlainText()
	{
		return CQt.QTextDocument_ToPlainText(this.nativePtr);
	}
	
	public void SetPlainText(String text)
	{
		CQt.QTextDocument_SetPlainText(this.nativePtr, libqt_string(text));
	}
	
	public void CharacterAt(int32 pos)
	{
		CQt.QTextDocument_CharacterAt(this.nativePtr, pos);
	}
	
	public void Find(String subString)
	{
		CQt.QTextDocument_Find(this.nativePtr, libqt_string(subString));
	}
	
	public void Find2(String subString, IQTextCursor cursor)
	{
		CQt.QTextDocument_Find2(this.nativePtr, libqt_string(subString), (cursor == default || cursor.NativePtr == default) ? default : cursor.NativePtr);
	}
	
	public void FindWithExpr(IQRegularExpression expr)
	{
		CQt.QTextDocument_FindWithExpr(this.nativePtr, (expr == default || expr.NativePtr == default) ? default : expr.NativePtr);
	}
	
	public void Find3(IQRegularExpression expr, IQTextCursor cursor)
	{
		CQt.QTextDocument_Find3(this.nativePtr, (expr == default || expr.NativePtr == default) ? default : expr.NativePtr, (cursor == default || cursor.NativePtr == default) ? default : cursor.NativePtr);
	}
	
	public void* FrameAt(int32 pos)
	{
		return CQt.QTextDocument_FrameAt(this.nativePtr, pos);
	}
	
	public void* RootFrame()
	{
		return CQt.QTextDocument_RootFrame(this.nativePtr);
	}
	
	public void* Object(int32 objectIndex)
	{
		return CQt.QTextDocument_Object(this.nativePtr, objectIndex);
	}
	
	public void* ObjectForFormat(IQTextFormat param1)
	{
		return CQt.QTextDocument_ObjectForFormat(this.nativePtr, (param1 == default || param1.NativePtr == default) ? default : param1.NativePtr);
	}
	
	public void FindBlock(int32 pos)
	{
		CQt.QTextDocument_FindBlock(this.nativePtr, pos);
	}
	
	public void FindBlockByNumber(int32 blockNumber)
	{
		CQt.QTextDocument_FindBlockByNumber(this.nativePtr, blockNumber);
	}
	
	public void FindBlockByLineNumber(int32 blockNumber)
	{
		CQt.QTextDocument_FindBlockByLineNumber(this.nativePtr, blockNumber);
	}
	
	public void Begin()
	{
		CQt.QTextDocument_Begin(this.nativePtr);
	}
	
	public void End()
	{
		CQt.QTextDocument_End(this.nativePtr);
	}
	
	public void FirstBlock()
	{
		CQt.QTextDocument_FirstBlock(this.nativePtr);
	}
	
	public void LastBlock()
	{
		CQt.QTextDocument_LastBlock(this.nativePtr);
	}
	
	public void SetPageSize(IQSizeF size)
	{
		CQt.QTextDocument_SetPageSize(this.nativePtr, (size == default || size.NativePtr == default) ? default : size.NativePtr);
	}
	
	public void PageSize()
	{
		CQt.QTextDocument_PageSize(this.nativePtr);
	}
	
	public void SetDefaultFont(IQFont font)
	{
		CQt.QTextDocument_SetDefaultFont(this.nativePtr, (font == default || font.NativePtr == default) ? default : font.NativePtr);
	}
	
	public void DefaultFont()
	{
		CQt.QTextDocument_DefaultFont(this.nativePtr);
	}
	
	public void SetSuperScriptBaseline(double baseline)
	{
		CQt.QTextDocument_SetSuperScriptBaseline(this.nativePtr, baseline);
	}
	
	public double SuperScriptBaseline()
	{
		return CQt.QTextDocument_SuperScriptBaseline(this.nativePtr);
	}
	
	public void SetSubScriptBaseline(double baseline)
	{
		CQt.QTextDocument_SetSubScriptBaseline(this.nativePtr, baseline);
	}
	
	public double SubScriptBaseline()
	{
		return CQt.QTextDocument_SubScriptBaseline(this.nativePtr);
	}
	
	public void SetBaselineOffset(double baseline)
	{
		CQt.QTextDocument_SetBaselineOffset(this.nativePtr, baseline);
	}
	
	public double BaselineOffset()
	{
		return CQt.QTextDocument_BaselineOffset(this.nativePtr);
	}
	
	public int32 PageCount()
	{
		return CQt.QTextDocument_PageCount(this.nativePtr);
	}
	
	public bool IsModified()
	{
		return CQt.QTextDocument_IsModified(this.nativePtr);
	}
	
	public void Print(IQPagedPaintDevice printer)
	{
		CQt.QTextDocument_Print(this.nativePtr, (printer == default || printer.NativePtr == default) ? default : printer.NativePtr);
	}
	
	public void Resource(int32 typeVal, IQUrl name)
	{
		CQt.QTextDocument_Resource(this.nativePtr, typeVal, (name == default || name.NativePtr == default) ? default : name.NativePtr);
	}
	
	public void AddResource(int32 typeVal, IQUrl name, IQVariant resource)
	{
		CQt.QTextDocument_AddResource(this.nativePtr, typeVal, (name == default || name.NativePtr == default) ? default : name.NativePtr, (resource == default || resource.NativePtr == default) ? default : resource.NativePtr);
	}
	
	public void[] AllFormats()
	{
		return CQt.QTextDocument_AllFormats(this.nativePtr);
	}
	
	public void MarkContentsDirty(int32 from, int32 length)
	{
		CQt.QTextDocument_MarkContentsDirty(this.nativePtr, from, length);
	}
	
	public void SetUseDesignMetrics(bool b)
	{
		CQt.QTextDocument_SetUseDesignMetrics(this.nativePtr, b);
	}
	
	public bool UseDesignMetrics()
	{
		return CQt.QTextDocument_UseDesignMetrics(this.nativePtr);
	}
	
	public void SetLayoutEnabled(bool b)
	{
		CQt.QTextDocument_SetLayoutEnabled(this.nativePtr, b);
	}
	
	public bool IsLayoutEnabled()
	{
		return CQt.QTextDocument_IsLayoutEnabled(this.nativePtr);
	}
	
	public void DrawContents(IQPainter painter)
	{
		CQt.QTextDocument_DrawContents(this.nativePtr, (painter == default || painter.NativePtr == default) ? default : painter.NativePtr);
	}
	
	public void SetTextWidth(double width)
	{
		CQt.QTextDocument_SetTextWidth(this.nativePtr, width);
	}
	
	public double TextWidth()
	{
		return CQt.QTextDocument_TextWidth(this.nativePtr);
	}
	
	public double IdealWidth()
	{
		return CQt.QTextDocument_IdealWidth(this.nativePtr);
	}
	
	public double IndentWidth()
	{
		return CQt.QTextDocument_IndentWidth(this.nativePtr);
	}
	
	public void SetIndentWidth(double width)
	{
		CQt.QTextDocument_SetIndentWidth(this.nativePtr, width);
	}
	
	public double DocumentMargin()
	{
		return CQt.QTextDocument_DocumentMargin(this.nativePtr);
	}
	
	public void SetDocumentMargin(double margin)
	{
		CQt.QTextDocument_SetDocumentMargin(this.nativePtr, margin);
	}
	
	public void AdjustSize()
	{
		CQt.QTextDocument_AdjustSize(this.nativePtr);
	}
	
	public void Size()
	{
		CQt.QTextDocument_Size(this.nativePtr);
	}
	
	public int32 BlockCount()
	{
		return CQt.QTextDocument_BlockCount(this.nativePtr);
	}
	
	public int32 LineCount()
	{
		return CQt.QTextDocument_LineCount(this.nativePtr);
	}
	
	public int32 CharacterCount()
	{
		return CQt.QTextDocument_CharacterCount(this.nativePtr);
	}
	
	public void SetDefaultStyleSheet(String sheet)
	{
		CQt.QTextDocument_SetDefaultStyleSheet(this.nativePtr, libqt_string(sheet));
	}
	
	public libqt_string DefaultStyleSheet()
	{
		return CQt.QTextDocument_DefaultStyleSheet(this.nativePtr);
	}
	
	public void Undo(IQTextCursor cursor)
	{
		CQt.QTextDocument_Undo(this.nativePtr, (cursor == default || cursor.NativePtr == default) ? default : cursor.NativePtr);
	}
